<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">FF Skin Tools - Pro</string>

    <!--    id iklan debug-->
    <string name="app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_id_applovin" translatable="false">DFcGq2Ic9w_Pd1q91ocd2lzxAfZebnQEXt8nDQLUcys6zlT9Df1W_FlQHDtsIPMzineKJkReu9OXOF0OpTqi1U</string>
    <string name="app_id_startio" translatable="false">211925100</string>

<!--    id iklan release-->
<!--    <string name="app_id" translatable="false">ca-app-pub-1192012140469703~3424406043</string>-->
<!--    <string name="app_id_applovin" translatable="false">DFcGq2Ic9w_Pd1q91ocd2lzxAfZebnQEXt8nDQLUcys6zlT9Df1W_FlQHDtsIPMzineKJkReu9OXOF0OpTqi1U</string>-->
<!--    <string name="app_id_startio" translatable="false">211925100</string>-->


    <!--    additional-->
    <string name="todo">TODO</string>
    <string name="update">update</string>
    <string name="download">Download</string>
    <string name="preview">preview</string>
    <string name="cara_install">How to Install</string>
    <string name="tutor_1">1. Click the Download Button</string>
    <string name="tutor_2">2. Wait for the Download Process to Take Place</string>
    <string name="tutor_3">3. Install If Download Successful</string>
    <string name="tutor_3_android11">3. Click Install Manually and Install the CX File Xplorer Application for folder management on Android 11 and above..</string>
    <string name="tutor_4_andro11">4. move the "com.mobile.legends" folder in the "Storage/Download/Skin Pack Mobile Legends/" folder to the "Storage/Android/data/" folder and dont forget to select overwrite to replace all existing files..</string>
    <string name="welcome">Welcome</string>
    <string name="mobile_legends_skins_tools">FF Skins Tools</string>
    <string name="pasang_skin_original">Install your original skin and skin pack here..</string>
    <string name="additional_pack">Additional Pack</string>
    <string name="pasang_emot_pack">Install Emot Pack etc \nhere ..</string>
    <string name="skins_custom">More Skins Custom</string>
    <string name="skins_custom_aja">Skins Custom</string>
    <string name="pasang_skins_brody">Install Skins Brody Mod\nNaruto etc, here..</string>
    <string name="popular_skin">Popular Skins</string>
    <string name="_2021_2022_candle_keeper" translatable="false">Support By Crevto</string>
    <string name="cancel">Cancel</string>
    <string name="install">Install</string>
    <string name="download_selesai">Download Complete, Click Install</string>
`    <string name="install_again">Install Again</string>
    <string name="aplikasi_baru">New App</string>
    <string name="update_untuk_mendapatkan_fitur_terbaru">Update to get the latest features..</string>
    <string name="nanti">Later</string>

    <string name="acces">Requires Access to install Skins..</string>
    <string name="complete_download">Complete Downloaded</string>
    <string name="size_file">File Size</string>
    <string name="tunggu_proses_download_belum_selesai">wait for the download process has not been completed..</string>
    <string name="tunggu_proses_install_belum_selesai">Wait for the installation process not finished yet..</string>
    <string name="coba_install_kembali">Try Installing Again..Make Sure Its Correct Choose the ML Game version (Global or Vietnamese) or Clear Data Application</string>
    <string name="kembali">Back</string>
    <string name="tunggu_proses_install_sedang">Wait for the installation process to take place..</string>
    <string name="skin_berhasil_dipasang">installed successfully..</string>
    <string name="buka_ml">Open Game</string>
    <string name="ml_tidak_ada">Free Fire game is not on your device..</string>
    <string name="buka_aplikasi_files">Open the Files application to move folders..</string>
    <string name="tunggu_proses_download_sedang_berlangsung">Wait for the Download Process in progress..</string>
    <string name="reload">Reload</string>
    <string name="versi_android_anda_mengharuskan">Your Android Version Requires Manual Install..</string>
    <string name="install_manual">Install Manual</string>
    <string name="semua_skin">All Skins</string>
    <string name="mohon_cek_koneksi">Please check your connection..</string>
    <string name="server_error">Server Error, please report it to be fixed immediately!</string>
    <string name="empty">Sorry, the data hasnt been updated yet..</string>
    <string name="tutorial_instal_in_your_device">tutorial instal in your device</string>
    <string name="bahasa">Language</string>
    <string name="share">Share</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_language">Change Language</string>
    <string name="setting">Setting</string>
    <string name="maav_aplikasi_sedang">Sorry, the application is under repair.. Please wait a moment longer..</string>
    <string name="perbaikan_server">Server Repair</string>
    <string name="ok">OK</string>
    <string name="berikan_kami_rating">Give Us Rating :(</string>
    <string name="title_request_skins">Request Skins</string>
    <string name="coba_lagi">Try Again</string>
    <string name="keluar">Close</string>
    <string name="no_internet">No Internet!!</string>
    <string name="android_11_wajib">Android 11 must manually move the skins folder !!</string>
    <string name="pindahkan">Move</string>
    <string name="tutorial_install" translatable="false">tutorial install</string>
    <string name="tutorial_uninstall" translatable="false">tutorial uninstall</string>
    <string name="sorry_this_feature"> sorry feature not available in this menu </string>
    <string name="please_click">Please click BACK again to exit..</string>
    <string name="title_more" translatable="false">More</string>
    <string name="rate">Hey Give Us a Rating so that we are excited to develop this application.. Thank you..</string>
    <string name="lihat">Show</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="toast_submit_app">All data must be filled in.</string>
    <string name="send">Send</string>
    <string name="jika_ada_masalah">if there is a problem with these skins, report it immediately by clicking this menu so that it can be fixed immediately!!</string>
    <string name="pilih_jenis_game">Select Game Type</string>
    <string name="pilih_sesuai">choose according to the Free Fire Game you want to install, so that the skins are successfully installed !!</string>
    <string name="ff_biasa" translatable="false">Free Fire</string>
    <string name="ff_max" translatable="false">Free Fire Max</string>
    <string name="centang_jika_tidak_ingin_menampilkan_ini_lagi">check if you dont want to show this again</string>
    <string name="skin_hanya_utk">skin only for</string>
    <string name="pilih_skin_yg_lain">select another skin</string>
    <string name="game_type_ff">For FF</string>
    <string name="game_type_max">For FF MAX</string>
    <string name="game_type_double">For FF and FF MAX</string>
</resources>