<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="8dp"
    ads:cardCornerRadius="16dp"
    ads:cardElevation="8dp"
    ads:contentPadding="24dp"
    ads:layout_constraintBottom_toBottomOf="parent"
    ads:layout_constraintEnd_toEndOf="parent"
    ads:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_splash">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lootie"
            android:layout_width="200dp"
            android:layout_height="200dp"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent"
            ads:lottie_autoPlay="true"
            ads:lottie_loop="true" />

        <TextView
            android:id="@+id/tvSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/lootie"
            android:text="@string/no_internet"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/tvSize"
            android:text="@string/mohon_cek_koneksi"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/tvDescription">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/bg_border_image"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/keluar"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnInstall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/coba_lagi"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>