<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="8dp"
    ads:cardCornerRadius="16dp"
    ads:cardElevation="8dp"
    ads:contentPadding="24dp"
    android:backgroundTint="@color/white"
    ads:layout_constraintBottom_toBottomOf="parent"
    ads:layout_constraintEnd_toEndOf="parent"
    ads:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_splash">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />

        <ImageView
            android:id="@+id/ivPlay"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
            app:layout_constraintEnd_toEndOf="@+id/ivBackground"
            app:layout_constraintStart_toStartOf="@+id/ivBackground"
            app:layout_constraintTop_toTopOf="@+id/ivBackground" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/ivBackground"
            tools:text="Angry Bird" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="aplikasi yg sangat gg, bisa membuat hari anda menjadi semnagt untuk tidak ngapa-ngapa in" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/tvDescription">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/bg_border_image"
                android:text="@string/nanti"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnInstall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:text="@string/install"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>